# xlang

./: .gitignore  Cargo.toml
test_files/: test.xl
xlang_compiler/: Cargo.toml
xlang_compiler/src/: main.rs
xlang_core/: Cargo.toml
xlang_core/src/: ast.rs  lexer.rs  lib.rs  parse_expression.rs  parser.rs  token.rs
xlang_lsp/: package.json
xlang_lsp/client/src/: extension.ts
xlang_lsp/lsp_server/: Cargo.toml
xlang_lsp/lsp_server/src/: main.rs
xlang_lsp/syntaxes/: xlang.tmLanguage.json
xlang_util/: Cargo.toml
xlang_util/src/: format.rs  refs.rs
xlang_vm/: Cargo.toml
xlang_vm/src/: const_value.rs  error.rs  evaluator.rs  lib.rs  main.rs  pass.rs  scope.rs  stdlib.rs
