[package]
name = "xlang_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang_util = { path = "../xlang_util" }
log = { version = "*", features = ["std"] }
tower-lsp = "*"
pollster = "*"
linked-hash-map = "*"
handlebars = "4.3.6"
