[package]
name = "xlang_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
linked-hash-map = "0.5.6"
xlang_core = { path = "../xlang_core" }
xlang_util = { path = "../xlang_util" }
