[package]
name = "lsp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang_core = { path = "../../xlang_core" }
tokio = { version = "1.24.2", features = ["full"] }
serde = "*"
serde_json = "*"
tower-lsp = "0.18.0"
log = "*"